syntax = "proto3";

package farewell;

option go_package = "proto/gen/farewell;farewellpd";

service AufWiedersehen {
    rpc BigGoodBye(GoodByeRequest) returns (GoodByeResponse);
}

message GoodByeRequest {
    string name = 1;
}

message GoodByeResponse {
    string message = 1;
}