syntax = "proto3";

package main;

import "user/user.proto"; // proto/user/user.proto
import "order.proto";   // proto/order.proto


option go_package = "../gen;mainpb"; // derlenen dosyanın gideceği yer

service Greeter {
    // Basit RPC örneği
    rpc SayHello (HelloRequest) returns (HelloResponse);

    // user.User -> user.proto içindeki User mesajı
    // Order     -> order.proto içindeki Order mesajı
    rpc Orders (user.User) returns (order.Order);
}

message HelloRequest {
    string name = 1;
    int32 age = 2;
}

message HelloResponse {
    string conf_message = 1;
}

// Ek mesaj örneği (şu an kullanılmıyor ama ileride kullanılabilir)
message UserProfile {
    string username = 1;
    string email = 2;
}